--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorAccent">#F4511E</color>
+
+<!--
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorAccent</color>
+-->
 
 
     <color name="white">#FFFFFF</color>
