--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="sign_button_hight">52dp</dimen>
+    <dimen name="sign_up_field_higth">52dp</dimen>
 </resources>
