--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="userMst"
-            type="com.apkzube.quizube.model.RegUserMst" />
+            name="model"
+            type="com.apkzube.quizube.viewmodel.SignUpViewModel" />
 
     </data>
 
@@ -59,7 +59,7 @@
                     android:hint="@string/user_id"
                     android:maxLines="1"
 
-                    android:text="@={userMst.userId}"
+                    android:text="@={model.userMst.userId}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -79,7 +79,7 @@
                     android:layout_height="@dimen/sign_up_field_higth"
                     android:fontFamily="@font/popin"
                     android:hint="@string/user_name"
-                    android:text="@={userMst.userName}"
+                    android:text="@={model.userMst.userName}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -99,7 +99,7 @@
                     android:fontFamily="@font/popin"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
-                    android:text="@={userMst.emailId}"
+                    android:text="@={model.userMst.emailId}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -120,7 +120,7 @@
                     android:fontFamily="@font/popin"
                     android:hint="@string/password"
                     android:inputType="textPassword"
-                    android:text="@={userMst.password}"
+                    android:text="@={model.userMst.password}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -141,19 +141,42 @@
                     android:fontFamily="@font/popin"
                     android:hint="@string/confirm_password"
                     android:inputType="textPassword"
-                    android:text="@={userMst.confPassword}"
+                    android:text="@={model.userMst.confPassword}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/txtError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:fontFamily="@font/popin"
+                android:visibility="gone"
+                android:padding="8dp"
+                android:textColor="@color/error_text"
+                android:textStyle="bold" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_height="3dp" />
 
             <Button
                 android:id="@+id/btnSignUp"
                 style="@style/AppTheme.RoundedCornerMaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/sign_button_hight"
-                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@color/colorAccent"
                 android:fontFamily="@font/popin"
+                android:onClick="@{model::registerUser}"
                 android:text="@string/sign_up"
                 android:textColor="@color/white" />
 
