--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,8 +57,8 @@
                     android:layout_height="@dimen/sign_up_field_higth"
                     android:fontFamily="@font/popin"
                     android:hint="@string/user_id"
+                    android:inputType="textPersonName"
                     android:maxLines="1"
-
                     android:text="@={model.userMst.userId}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -78,6 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/sign_up_field_higth"
                     android:fontFamily="@font/popin"
+                    android:inputType="textPersonName"
                     android:hint="@string/user_name"
                     android:text="@={model.userMst.userName}"
                     android:textSize="14sp"
@@ -157,23 +158,13 @@
                 android:textColor="@color/error_text"
                 android:textStyle="bold" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_height="3dp" />
 
             <Button
                 android:id="@+id/btnSignUp"
                 style="@style/AppTheme.RoundedCornerMaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/sign_button_hight"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_margin="16dp"
                 android:background="@color/colorAccent"
                 android:fontFamily="@font/popin"
                 android:onClick="@{model::registerUser}"
