--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -67,7 +67,7 @@
                         android:hint="@string/user_id"
                         android:inputType="textPersonName"
                         android:maxLines="1"
-                        android:text="@={model.userMst.userId}"
+                        android:text="@={model.userId}"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -86,7 +86,7 @@
                         android:fontFamily="@font/popin"
                         android:hint="@string/user_name"
                         android:inputType="textPersonName"
-                        android:text="@={model.userMst.userName}"
+                        android:text="@={model.userName}"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -108,7 +108,7 @@
                     android:fontFamily="@font/popin"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
-                    android:text="@={model.userMst.emailId}"
+                    android:text="@={model.email}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -135,7 +135,7 @@
                         android:fontFamily="@font/popin"
                         android:hint="@string/password"
                         android:inputType="textPassword"
-                        android:text="@={model.userMst.password}"
+                        android:text="@={model.password}"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -155,7 +155,7 @@
                         android:fontFamily="@font/popin"
                         android:hint="@string/confirm_password"
                         android:inputType="textPassword"
-                        android:text="@={model.userMst.confPassword}"
+                        android:text="@={model.confimPassword}"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                 </com.google.android.material.textfield.TextInputLayout>
