--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.SignUp">
+        tools:context=".activity.SignUpActivity">
 
         <TextView
             android:layout_width="wrap_content"
@@ -142,7 +142,7 @@
                     android:fontFamily="@font/popin"
                     android:hint="@string/confirm_password"
                     android:inputType="textPassword"
-                    android:text="@={model.confimPassword}"
+                    android:text="@={model.confirmPassword}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
