--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -6,14 +6,14 @@
     <data>
         <variable
             name="clickListener"
-            type="com.apkzube.quizube.activity.LoginActivity.LoginActivityClickListener" />
+            type="com.apkzube.quizube.activity.registration.LoginActivity.LoginActivityClickListener" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.LoginActivity">
+        tools:context=".activity.registration.LoginActivity">
 
         <FrameLayout
             android:id="@+id/frameLayout"
@@ -159,6 +159,7 @@
                     android:layout_height="@dimen/sign_button_hight"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
+                    android:background="@drawable/round_shape"
                     android:fontFamily="@font/popin"
                     android:text="@string/sign_up"
                     android:textAllCaps="false"
@@ -169,6 +170,7 @@
                     style="@style/AppTheme.RoundedCornerMaterialButton"
                     android:onClick="@{clickListener::signIn}"
                     android:layout_width="0dp"
+                    android:background="@drawable/round_shape"
                     android:layout_height="@dimen/sign_button_hight"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
