--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,14 +7,14 @@
 
         <variable
             name="model"
-            type="com.apkzube.quizube.viewmodel.SignUpViewModel" />
+            type="com.apkzube.quizube.viewmodel.registration.SignUpViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.SignUpActivity">
+        tools:context=".activity.registration.SignUpActivity">
 
         <TextView
             android:layout_width="wrap_content"
@@ -22,9 +22,10 @@
             android:layout_gravity="top|center"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/font"
-            android:text="@string/sign_up"
+            android:text="@string/create_account_sign_up"
+            android:textAlignment="center"
             android:textColor="@color/colorAccent"
-            android:textSize="26sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
@@ -161,15 +162,33 @@
 
             <Button
                 android:id="@+id/btnSignUp"
-                style="@style/AppTheme.RoundedCornerMaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/sign_button_hight"
-                android:layout_margin="16dp"
-                android:background="@color/colorAccent"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/round_shape"
                 android:fontFamily="@font/popin"
+                android:textAllCaps="false"
                 android:onClick="@{model::registerUser}"
                 android:text="@string/sign_up"
                 android:textColor="@color/white" />
+
+
+            <TextView
+                android:id="@+id/txtAlreadyAccount"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/text_heigth"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/popin"
+                android:gravity="center|end"
+                android:text="@string/already_have_account"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/blue_gray" />
+
 
 
         </LinearLayout>
