--- a/app/src/main/res/layout/dialog_sign_in_layout.xml
+++ b/app/src/main/res/layout/dialog_sign_in_layout.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="model"
-            type="com.apkzube.quizube.viewmodel.LoginViewModel" />
+            type="com.apkzube.quizube.viewmodel.registration.LoginViewModel" />
     </data>
 
     <RelativeLayout
@@ -111,24 +111,40 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/colorAccent"
+                android:background="@drawable/round_shape"
                 android:fontFamily="@font/popin"
-                android:text="@string/sign_in"
+                android:text="@string/get_start_it"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
+
 
             <TextView
                 android:id="@+id/txtSignUp"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/sign_button_hight"
-                android:fontFamily="@font/popin"
-                android:padding="8dp"
+                android:layout_height="@dimen/text_heigth"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:text="@string/create_account"
+                android:fontFamily="@font/popin"
                 android:gravity="center|end"
+                android:text="@string/create_account"
+                android:textAllCaps="false"
                 android:textColor="@color/blue_gray"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtForgotPassword"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/text_heigth"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/popin"
+                android:gravity="center|end"
+                android:text="@string/forgot_password"
+                android:textAllCaps="false"
+                android:textColor="@color/blue_gray"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
 
@@ -136,13 +152,16 @@
 
         <ImageView
             android:id="@+id/btnClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:padding="16dp"
             android:tint="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_close" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     </RelativeLayout>
 </layout>
