--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,9 @@
     <color name="white">#FFFFFF</color>
 
 
-    <color name="blue_gray">#607D8B</color>
+    <color name="blue_gray">#757575</color>
     <color name="black">#000000</color>
+    <color name="black_text_color">#263238</color>
 
 
     <color name="c_8bc34a">#8bc34a</color>
