--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     </style>
 
-    <style name="AppTheme.SignUp" parent="Theme.MaterialComponents.Light.NoActionBar">        <!-- Customize your theme here. -->
+    <style name="AppTheme.SignUp" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorAccent">@color/colorAccent</item>
